Arranged src/Makefile.am to give library name to the linker in correct order.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*.RES
 *.a
 *.core
 *.dll
@@ -13,7 +14,6 @@
 *.pdb
 *.pyc
 *.res
-*.RES
 *.so
 *.suo
 *.tar
@@ -24,6 +24,10 @@
 *~
 .ditz-config
 .ditz-plugins
+Debug
+Makefile
+Release
+aclocal.m4
 autom4te.cache
 bdwgc/.deps/
 bdwgc/.dirstamp
@@ -35,14 +39,15 @@ bdwgc/libatomic_ops-1.2/src/.deps/
 bdwgc/libatomic_ops-1.2/tests/.deps/
 bdwgc/tests/.deps/
 config.h
+config.h.in
 config.log
 config.status
 config.status.log
+configure
 configure.log
 configure.scan
 core
 core.*
-Debug
 doc/_build
 ext/.deps/
 gmp/.libs/
@@ -89,8 +94,8 @@ gmp/mpn/divrem.c
 gmp/mpn/divrem_1.asm
 gmp/mpn/divrem_2.asm
 gmp/mpn/dump.c
-gmp/mpn/fib_table.c
 gmp/mpn/fib2_ui.c
+gmp/mpn/fib_table.c
 gmp/mpn/gcd.c
 gmp/mpn/gcd_1.c
 gmp/mpn/gcd_lehmer.c
@@ -159,18 +164,18 @@ gmp/mpn/sub_n.asm
 gmp/mpn/subcnd_n.c
 gmp/mpn/submul_1.asm
 gmp/mpn/tdiv_qr.c
-gmp/mpn/toom_interpolate_5pts.c
-gmp/mpn/toom_interpolate_7pts.c
-gmp/mpn/toom2_sqr.c
 gmp/mpn/toom22_mul.c
-gmp/mpn/toom3_sqr.c
+gmp/mpn/toom2_sqr.c
 gmp/mpn/toom32_mul.c
 gmp/mpn/toom33_mul.c
-gmp/mpn/toom4_sqr.c
+gmp/mpn/toom3_sqr.c
 gmp/mpn/toom42_mul.c
 gmp/mpn/toom44_mul.c
+gmp/mpn/toom4_sqr.c
 gmp/mpn/toom53_mul.c
 gmp/mpn/toom62_mul.c
+gmp/mpn/toom_interpolate_5pts.c
+gmp/mpn/toom_interpolate_7pts.c
 gmp/mpn/udiv.asm
 gmp/mpn/umul.asm
 gmp/mpq/.libs/
@@ -183,7 +188,6 @@ html
 include/yog/inst.h
 include/yog/opcodes.h
 libtool
-Makefile
 onig/.deps/
 onig/.libs/
 onig/onig-config
@@ -199,7 +203,6 @@ onig/sample/sql
 onig/sample/syntax
 parser.output
 pthreads-w32/libpthreadGC2.stamp
-Release
 sigsegv/src/.libs/
 sigsegv/termbold
 sigsegv/termnorm
@@ -209,6 +212,7 @@ sigsegv/tests/sigsegv3
 sigsegv/tests/stackoverflow1
 sigsegv/tests/stackoverflow2
 src/.deps/
+src/Makefile.in
 src/array.inc
 src/builtins.inc
 src/code.inc
