--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 *.lib
 *.lo
 *.log
+*.msi
 *.ncb
 *.o
 *.obj
@@ -20,6 +21,8 @@
 *.tar.bz2
 *.tar.gz
 *.tar.xz
+*.wixobj
+*.wixpdb
 *.zip
 *~
 .ditz-config
