--- a/issues/project.yaml
+++ b/issues/project.yaml
@@ -22,10 +22,14 @@ releases:
     - ""
 - !ditz.rubyforge.org,2008-03-06/release 
   name: 0.0.2
-  status: :unreleased
-  release_time: 
+  status: :released
+  release_time: 2009-10-10 03:13:55.768858 Z
   log_events: 
   - - 2009-09-10 11:22:55.991304 Z
     - Sumi Tomohiko <SumiTomohiko@neko-daisuki.ddo.jp>
     - created
+    - ""
+  - - 2009-10-10 03:13:55.768894 Z
+    - Sumi Tomohiko <SumiTomohiko@neko-daisuki.ddo.jp>
+    - released
     - ""
