--- a/issues/project.yaml
+++ b/issues/project.yaml
@@ -33,3 +33,12 @@ releases:
     - Sumi Tomohiko <SumiTomohiko@neko-daisuki.ddo.jp>
     - released
     - ""
+- !ditz.rubyforge.org,2008-03-06/release 
+  name: 0.0.3
+  status: :unreleased
+  release_time: 
+  log_events: 
+  - - 2009-10-20 05:34:06.406606 Z
+    - Sumi Tomohiko <SumiTomohiko@neko-daisuki.ddo.jp>
+    - created
+    - ""
