Added coroutine member to YogEnv.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -56,7 +56,7 @@ COMMON_SOURCES = arg.c \
 	vm.c
 CFLAGS_COMMON = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include \
 		-I$(GMP_DIR) -Wall -DPREFIX=\"$(prefix)\" -D_XOPEN_SOURCE=500 \
-		@CFLAGS_COMMON@
+		-D_BSD_SOURCE @CFLAGS_COMMON@
 LDFLAGS_COMMON = -export-dynamic @LDFLAGS_COMMON@
 LIBS = $(ONIG_DIR)/.libs/libonig.a $(GMP_DIR)/.libs/libgmp.a -lm @LIBS@
 
