--- a/doc/conf.py.in
+++ b/doc/conf.py.in
@@ -37,7 +37,7 @@ source_suffix = '.rst'
 #source_encoding = 'utf-8'
 
 # The master toctree document.
-master_doc = 'index'
+master_doc = 'contents'
 
 # General information about the project.
 project = u'Yog'
@@ -139,7 +139,7 @@ html_static_path = ['_static']
 
 # Additional templates that should be rendered to pages, maps page names to
 # template names.
-#html_additional_pages = {}
+html_additional_pages = { "index": "index.html" }
 
 # If false, no module index is generated.
 #html_use_modindex = True
@@ -164,6 +164,7 @@ html_static_path = ['_static']
 # Output file base name for HTML help builder.
 htmlhelp_basename = 'Yogdoc'
 
+html_index = 'index.html'
 
 # -- Options for LaTeX output --------------------------------------------------
 
