--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.61)
-AC_INIT(Yog, 0.0.3, SumiTomohiko@neko-daisuki.ddo.jp)
+AC_INIT(Yog, 0.0.4, SumiTomohiko@neko-daisuki.ddo.jp)
 AM_INIT_AUTOMAKE([dist-bzip2])
 AC_CONFIG_SRCDIR([config.h.in])
 AC_CONFIG_HEADER([config.h])
@@ -63,7 +63,7 @@ if test "${enable_google_perftools}" = "yes"; then
 fi
 
 AC_CONFIG_FILES([Makefile src/Makefile tools/lemon/Makefile tests/Makefile
-                 ext/Makefile doc/conf.py])
+                 ext/Makefile])
 
 AC_CANONICAL_HOST
 case "${host}" in
