--- a/issues/project.yaml
+++ b/issues/project.yaml
@@ -3,7 +3,7 @@ name: Yog
 version: "0.5"
 components: 
 - !ditz.rubyforge.org,2008-03-06/component 
-  name: Yog
+  name: core
 - !ditz.rubyforge.org,2008-03-06/component 
   name: document
 releases: 
