--- a/.gitignore
+++ b/.gitignore
@@ -199,6 +199,7 @@ gmp/printf/.libs/
 gmp/scanf/.libs/
 gmp/tune/sqr_basecase.c
 html
+include/yog/errno_vm.inc
 include/yog/inst.h
 include/yog/opcodes.h
 libtool
