--- a/doc/Makefile
+++ b/doc/Makefile
@@ -3,7 +3,7 @@
 
 # You can set these variables from the command line.
 SPHINXOPTS    =
-SPHINXBUILD   = sphinx-build -W -a
+SPHINXBUILD   = sphinx-build -W -a -E
 PAPER         =
 
 # Internal variables.
