Change the ditz's component "document" to "doc".

--- a/issues/project.yaml
+++ b/issues/project.yaml
@@ -5,7 +5,7 @@ components:
 - !ditz.rubyforge.org,2008-03-06/component 
   name: core
 - !ditz.rubyforge.org,2008-03-06/component 
-  name: document
+  name: doc
 - !ditz.rubyforge.org,2008-03-06/component 
   name: misc
 releases: 
