Fixed to import empty packages.

--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -3,8 +3,10 @@ prefix = @prefix@
 VERSION = @PACKAGE_VERSION@
 DIR = $(prefix)/lib/yog/$(VERSION)
 
+PKGS = hq9plus.yg peg.yg
+
 install:
 	mkdir -p $(DIR)
-	cp -f hq9plus.yg $(DIR)
+	install --mode 644 $(PKGS) $(DIR)
 
 # vim: tabstop=8 shiftwidth=8 noexpandtab
