Change doc/makedoc.yg to use the peg package.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -5,6 +5,6 @@ YOG = $(ROOT_DIR)/src/yog
 .PHONY: all
 
 all:
-	$(YOG) makedoc.yg builtins builtins.html
+	$(YOG) makedoc.yg lib/builtins builtins.html
 
 # vim: tabstop=8 shiftwidth=8 noexpandtab
