Changed documentation generater scripts' structure.
Main code is moved to lib/ydoc.yg. doc/makedoc.yg uses this.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,10 +1,14 @@
 
 ROOT_DIR = ..
 YOG = $(ROOT_DIR)/src/yog
+DEST_DIR = html
 
 .PHONY: all
 
 all:
-	$(YOG) makedoc.yg lib/builtins builtins.html
+	$(YOG) makedoc.yg --destdir=$(DEST_DIR) index.ydoc
+
+clean:
+	rm -rf $(DEST_DIR)
 
 # vim: tabstop=8 shiftwidth=8 noexpandtab
