--- a/.gitignore
+++ b/.gitignore
@@ -53,8 +53,7 @@ configure.log
 configure.scan
 core
 core.*
-doc/_build
-doc/conf.py
+doc/Makefile
 ext/.deps/
 ext/wx/wxWidgets/.pch/
 ext/wx/wxWidgets/bk-deps
