--- a/.gitignore
+++ b/.gitignore
@@ -260,6 +260,7 @@ tests/test_package4.ilk
 tests/test_package5.ilk
 tests/test_package6.ilk
 tests/test_write0.tmp
+tools/Output
 tools/lemon/.deps/
 tools/lemon/lemon
 tools/swig/CCache/ccache-swig
