--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@
 .gdb_history
 Debug
 Makefile
+Output
 Release
 aclocal.m4
 autom4te.cache
@@ -260,7 +261,6 @@ tests/test_package4.ilk
 tests/test_package5.ilk
 tests/test_package6.ilk
 tests/test_write0.tmp
-tools/Output
 tools/lemon/.deps/
 tools/lemon/lemon
 tools/swig/CCache/ccache-swig
